# LatticeBoltzman

./: .gitignore  CMakeLists.txt  DrawGraphs.py  DrawVelocityProfile.py  LICENSE  MakeGifs.py  README.md  TestParameters.py
simconfigs/: cylinder.json  example.json  poiseuille.json
src/: EntryPoint.cpp  Lattice.cpp  Lattice.h  Scene.cpp  Scene.h  Utils.cpp  Utils.h
